# Apex

./: .gitignore  README.md  master_plan.md  package-lock.json  package.json  tsconfig.base.json
.cargo/: config.toml
apps/desktop-shell/src-tauri/: Cargo.toml  README.md  tauri.conf.json
apps/desktop-shell/src-tauri/src/: main.rs
docs/: api-contracts.md  architecture-constitution.md  architecture-document-system.md  best-practice-reset-plan.md  capability-discovery-and-reuse.md  computer-use-runtime.md  current-architecture-status.md  data-model.md  deployment-and-environments.md  desktop-workspace-ui.md  external-pattern-adoption.md  glm-5.1-architecture-execution-spec.md  glm-5.1-computer-use-completion-spec.md  glm-5.1-computer-use-final-blocker-spec.md  glm-5.1-computer-use-host-parity-spec.md  glm-5.1-computer-use-host-validation-spec.md  glm-5.1-computer-use-last-mile-spec.md  glm-5.1-external-completion-master-spec.md  glm-5.1-external-readiness-spec.md  glm-5.1-final-local-closure-spec.md  glm-5.1-final-local-feasible-spec.md  glm-5.1-final-resource-activation-master-spec.md  glm-5.1-frontier-upgrade-spec.md  glm-5.1-hermes-clawhub-spec.md  glm-5.1-hybrid-memory-ttt-spec.md  glm-5.1-live-external-rollout-spec.md  glm-5.1-local-remaining-execution-spec.md  glm-5.1-post-contract-integration-spec.md  glm-5.1-post-frontier-resource-gated-spec.md  glm-5.1-post-local-remaining-spec.md  glm-5.1-privileged-readiness-spec.md  glm-5.1-remaining-priority-execution-spec.md  glm-5.1-resource-arrival-playbook.md  glm-5.1-resource-gated-resume-spec.md  index.md  (+12 more)
(+61 files in other folders)
